Fix typo in ChangeLog
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76827 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,7 +1,7 @@
 2004-01-28  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13736
-	* g++.dg/parse/cast2.C (main): New test.
+	* g++.dg/parse/cast2.C: New test.
 
 2004-01-27  James E Wilson  <wilson@specifixinc.com>
 
