* config/m32r/m32r-protos.h: Remove the prototype for 	m32r_setup_incoming_varargs. 	* config/m32r/m32r.c (TARGET_PROMOTE_PROTOTYPES): New. 	(TARGET_STRUCT_VALUE_RTX): Likewise. 	(TARGET_RETURN_IN_MEMORY): Likewise. 	(TARGET_SETUP_INCOMING_VARARGS): Likewise. 	(m32r_return_in_memory): New. 	(m32r_setup_incoming_varargs): Make it static. 	* config/m32r/m32r.h: Remove #undef of 	ASM_OUTPUT_EXTERNAL_LIBCALL.  Remove the commented-out 	definitions of PROMOTE_FUNCTION_ARGS and 	PROMOTE_FUNCTION_RETURN. 	(PROMOTE_PROTOTYPES): Remove. 	(RETURN_IN_MEMORY): Likewise. 	(STRUCT_VALUE): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76834 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,23 @@
 2004-01-28  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/m32r/m32r-protos.h: Remove the prototype for
+	m32r_setup_incoming_varargs.
+	* config/m32r/m32r.c (TARGET_PROMOTE_PROTOTYPES): New.
+	(TARGET_STRUCT_VALUE_RTX): Likewise.
+	(TARGET_RETURN_IN_MEMORY): Likewise.
+	(TARGET_SETUP_INCOMING_VARARGS): Likewise.
+	(m32r_return_in_memory): New.
+	(m32r_setup_incoming_varargs): Make it static.
+	* config/m32r/m32r.h: Remove #undef of
+	ASM_OUTPUT_EXTERNAL_LIBCALL.  Remove the commented-out
+	definitions of PROMOTE_FUNCTION_ARGS and
+	PROMOTE_FUNCTION_RETURN.
+	(PROMOTE_PROTOTYPES): Remove.
+	(RETURN_IN_MEMORY): Likewise.
+	(STRUCT_VALUE): Likewise.
+
+2004-01-28  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/m68k/m68k.c (TARGET_PROMOTE_PROTOTYPES): New.
 	(TARGET_STRUCT_VALUE_RTX): Likewise.
 	(m68k_struct_value_rtx): Likewise.
