* config/mcore/mcore.c (mcore_external_libcall): Add a 	comment. 	(mcore_return_in_memory): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76836 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-28  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/mcore/mcore.c (mcore_external_libcall): Add a
+	comment.
+	(mcore_return_in_memory): Likewise.
+
+2004-01-28  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/mcore/mcore-protos.h: Remove the prototype for
 	mcore_setup_incoming_varargs.
 	* config/mcore/mcore.c (TARGET_ASM_EXTERNAL_LIBCALL): New.
