--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-28  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13791
+	* g++.dg/ext/attrib12.C: New test.
+
 	PR c++/13736
 	* g++.dg/parse/cast2.C: New test.
 
