--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-28  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	* g++.dg/parse/error11.C: New test.
+	* g++.dg/parse/error12.C: Likewise.
+
 2004-01-28  Ziemowit Laski  <zlaski@apple.com>
 
 	* objc.dg/proto-qual-1.m (ROUND, aligned_sizeof): New.
