2004-01-28  Daniel Berlin  <dberlin@dberlin.org>
	* timevar.c (timevar_print): Mention when checking is enabled.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76848 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-28  Daniel Berlin  <dberlin@dberlin.org>
+	
+	* timevar.c (timevar_print): Mention when checking is enabled.
+
 2004-01-28  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	* c-lex.c (c_lex): Rename to...
