* config/avr/avr.h: Remove target-independent comments about 	target macros.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76850 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-29  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/avr/avr.h: Remove target-independent comments about
+	target macros.
+
 2004-01-28  Daniel Berlin  <dberlin@dberlin.org>
 	
 	* timevar.c (timevar_print): Mention when checking is enabled.
