--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-29  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
+
+	* cfghooks.c (split_block): Set probability and count of the
+	new edge.
+
 2005-01-29  Josef Zlomek  <zlomekj@suse.cz>
 
 	* dwarf2out.c (struct die_struct): Added field decl_id.
