--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-29  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13883
+	* g++.dg/template/ctor3.C: New test.
+
 2004-01-29  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	* g++.dg/tc1: New directory.
