--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-29  Scott Gilbertson  <scottg@mantatest.com>
+
+	* gnu/java/awt/peer/ClasspathFontPeer.java (getTransform): Never
+	return null. 
+
 2004-01-29  Kim Ho  <kho@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GtkFramePeer.java
