--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-29  Geoffrey Keating  <geoffk@geoffk.org>
+
+	* objc.dg/call-super-2.m: Include stddef.h for size_t.
+
 2004-01-29  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13883
