* gnu/awt/xlib/XCanvasPeer.java (handleEvent): Implemented.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76900 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-29  Scott Gilbertson  <scottg@mantatest.com>
 
+	* gnu/awt/xlib/XCanvasPeer.java (handleEvent): Implemented.
+
+2004-01-29  Scott Gilbertson  <scottg@mantatest.com>
+
 	* Makefile.am: Added gnu/awt/xlib/XFontPeer.java.
 	* Makefile.in: Re-generated.
 	* gnu/awt/xlib/XFontPeer.java: New file.
