PR target/11475 	* config/sparc/sparc.md (movhi_lo_sum): Tighten predicates.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76928 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-30  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR target/11475
+	* config/sparc/sparc.md (movhi_lo_sum): Tighten predicates.
+
 2004-01-29  Jakub Jelinek  <jakub@redhat.com>
 
 	* emit-rtl.c (change_address): Use XEXP (memref, 0) instead
