--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-30  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* gcse.c (bypass_block): Fix a typo in the previous check-in
+	to the file.
+
 2004-01-30  Andrew Pinski <pinskia@physics.uc.edu>
 
 	* toplev.c: Include alloc-pool.h.
