2004-01-30  Michael Koch  <konqueror@gmx.de>
	* configure.in: Use pkg-config to check for GTK 2.2 and libart 2.1.
	* configure: Regenerated.
	* glib-2.0.m4: Removed.
	* gtk-2.0.m4: Removed.
	* libart.m4: Removed.
	* pkg.m4: New file.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76993 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-30  Michael Koch  <konqueror@gmx.de>
+
+	* configure.in: Use pkg-config to check for GTK 2.2 and libart 2.1.
+	* configure: Regenerated.
+	* glib-2.0.m4: Removed.
+	* gtk-2.0.m4: Removed.
+	* libart.m4: Removed.
+	* pkg.m4: New file.
+
 2004-01-30  Mohan Embar  <gnustuff@thisiscool.com>
 
 	* gnu/java/net/PlainSocketImpl.java 
