--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-30  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* Make-lang.in (doc/g77.dvi): Use $(abs_docdir). 
+
 2004-01-28  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* Make-lang.in (f/str-*.h, f/str-*.j): Use stamp files and
