--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,35 @@
+2004-01-30  Kazu Hirata  <kazu@cs.umass.edu>
+
+	alloc-pool.c, c-lex.c, c-pragma.h, c-semantics.c, cfghooks.c,
+	cfghooks.h, cfglayout.c, cfgloopmanip.c, debug.c, debug.h,
+	flow.c, genextract.c, ggc-common.c, ggc-page.c, ggc.h,
+	ifcvt.c, jump.c, loop-unswitch.c, timevar.c, timevar.def,
+	tree-optimize.c, vmsdbgout.c, config/fp-bit.c,
+	config/alpha/alpha.c, config/alpha/alpha.h,
+	config/alpha/alpha.md, config/alpha/unicosmk.h,
+	config/alpha/vms.h, config/arm/linux-elf.h, config/avr/avr.c,
+	config/c4x/c4x-protos.h, config/c4x/c4x.md,
+	config/d30v/d30v.h, config/frv/frv.md, config/frv/frvbegin.c,
+	config/frv/frvend.c, config/i386/cygming.h,
+	config/i386/djgpp.h, config/i386/emmintrin.h,
+	config/i386/gthr-win32.c, config/i386/i386-interix.h,
+	config/i386/i386-protos.h, config/i386/openbsd.h,
+	config/i386/winnt.c, config/i386/xm-mingw32.h,
+	config/i386/xmmintrin.h, config/ia64/ia64.md,
+	config/iq2000/iq2000.md, config/m32r/m32r.md,
+	config/m68k/m68k.md, config/mcore/mcore-elf.h,
+	config/mcore/mcore.md, config/mips/elf.h, config/mips/elf64.h,
+	config/mips/iris5gas.h, config/mips/iris6.h,
+	config/mips/iris6gas.h, config/mips/linux.h,
+	config/mips/mips.md, config/mips/netbsd.h,
+	config/mips/openbsd.h, config/mips/windiss.h,
+	config/pa/fptr.c, config/rs6000/aix.h,
+	config/rs6000/altivec.h, config/rs6000/darwin.h,
+	config/rs6000/xcoff.h, config/s390/s390-protos.h,
+	config/s390/s390.c, config/s390/s390.h, config/s390/s390.md,
+	config/sh/netbsd-elf.h, config/sh/sh.h, config/sh/vxworks.h,
+	config/sparc/sol2.h: Update copyright.
+
 2004-01-30  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Makefile.in (abs_docdir, abs_srcdir): Define.
