--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-30  Daniel Berlin  <dberlin@dberlin.org>
+
+	* ggc-zone.c (ggc_free): New function.
+
 2004-01-30  Kazu Hirata  <kazu@cs.umass.edu>
 
 	alloc-pool.c, c-lex.c, c-pragma.h, c-semantics.c, cfghooks.c,
