2004-01-30  Dara Hazeghi  <dhazeghi@yahoo.com>
        PR bootstrap/9249
        * doc/install.texi: document --enable-__cxa_atexit option.
        * configure.ac: Disable __cxa_atexit if not supported.
        * configure: Regenerate.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77023 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-30  Dara Hazeghi  <dhazeghi@yahoo.com>
+
+	PR bootstrap/9249
+	* doc/install.texi: document --enable-__cxa_atexit option.
+	* configure.ac: Disable __cxa_atexit if not supported.
+	* configure: Regenerate.
+
 2003-01-30  Daniel Berlin  <dberlin@dberlin.org>
 
 	* ggc-zone.c (ggc_free): New function.
