2004-01-30  Andrew Pinski  <pinskia@physics.uc.edu>
        * objc.dg/call-super-2.m: Update line numbers
        for the including of stddef.h.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77027 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-30  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* objc.dg/call-super-2.m: Update line numbers
+	for the including of stddef.h.
+
 2004-01-30  Michael Matz  <matz@suse.de>
 
 	* g++.dg/ext/case-range1.C, g++.dg/ext/case-range2.C,
