* config/s390/s390.c (s390_decompose_address): Do not treat virtual 	registers as pointers. 	* config/s390/s390.md ("*la_31" second peephole2): Fix incorrect mode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77036 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-31  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.c (s390_decompose_address): Do not treat virtual
+	registers as pointers.
+	* config/s390/s390.md ("*la_31" second peephole2): Fix incorrect mode.
+
 2004-01-31  Paolo Bonzini  <bonzini@gnu.org>
 
  	* combine.c (cse_main): Set gen_lowpart to gen_lowpart_for_combine
