--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,14 @@
 2004-01-31  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* alloc-pool.c: Fix comment typos.
+	* builtin-types.def: Likewise.
+	* builtins.def: Likewise.
+	* c-pretty-print.c: Likewise.
+	* df.h: Likewise.
+	* reload1.c: Likewise.
+
+2004-01-31  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* doc/invoke.texi: Follow spelling conventions.
 	* doc/tm.texi: Likewise.
 
