--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,13 @@
+2004-01-31  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* class.c: Fix comment typos.
+	* decl.c: Likewise.
+	* error.c: Likewise.
+	* parser.c: Likewise.
+	* pt.c: Likewise.
+	* search.c: Likewise.
+	* typeck.c: Likewise.
+
 2004-01-30  Richard Henderson  <rth@redhat.com>
 
         PR c++/13693
