* doc/invoke.texi (SPARC options): Restructure and update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77048 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-31  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* doc/invoke.texi (SPARC options): Restructure and update.
+
 2004-01-31  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* system.h (PROMOTE_FUNCTION_ARGS, STRUCT_VALUE_INCOMING, and
