* config/m32r/m32r.c (m32r_load_pic_register): Use GEN_INT 	instead of gen_rtx_CONST_INT.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77054 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-31  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/m32r/m32r.c (m32r_load_pic_register): Use GEN_INT
+	instead of gen_rtx_CONST_INT.
+
+2004-01-31  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/xtensa/xtensa.h (DYNAMIC_CHAIN_ADDRESS): Use GEN_INT
 	instead of gen_rtx_CONST_INT.
 
