* varasm.c (output_constant_pool): Don't zap the pool.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77056 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-31  Richard Henderson  <rth@redhat.com>
+
+	* varasm.c (output_constant_pool): Don't zap the pool.
+
 2004-01-31  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* genrecog.c (decision_type): Add DT_const_int.
