--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-31  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/c4x/c4x.md: Use GEN_INT instead of
+	gen_rtx (CONST_INT, ...).
+
 2004-01-31  Richard Henderson  <rth@redhat.com>
 
 	* varasm.c (output_constant_pool): Don't zap the pool.
