* config/mips/mips.md (adddi3_internal_2): Remove superfluous %s.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77066 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-01  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.md (adddi3_internal_2): Remove superfluous %s.
+
 2004-02-01  Chris Demetriou  <cgd@broadcom.com>
 
 	* config/mips/mips.h (PREDICATE_CODES): Remove entries for
