* builtins.def (BUILT_IN_SIGNBIT, BUILT_IN_SIGNBITF, 	BUILT_IN_SIGNBITL): New GCC builtins. 	* builtins.c (expand_builtin_signbit): New function to RTL expand 	calls to signbit, signbitf and signbitl as inline intrinsics. 	(expand_builtin): Call expand_builtin_signbit for BUILT_IN_SIGNBIT*. 	(fold_builtin_signbit): New function to perform constant folding 	of signbit, signbitf and signbitl. 	(fold_builtin): Call fold_builtin_signbit for BUILT_IN_SIGNBIT*.
	* doc/extend.texi: Document new signbit{,f,l} builtins.

	* gcc.dg/builtins-1.c: Also test for __builtin_signbit{,f,l}.
	* gcc.dg/builtins-31.c: New testcase.
	* gcc.dg/builtins-32.c: New testcase.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77070 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2004-02-01  Roger Sayle  <roger@eyesopen.com>
+
+	* builtins.def (BUILT_IN_SIGNBIT, BUILT_IN_SIGNBITF,
+	BUILT_IN_SIGNBITL): New GCC builtins.
+	* builtins.c (expand_builtin_signbit): New function to RTL expand
+	calls to signbit, signbitf and signbitl as inline intrinsics.
+	(expand_builtin): Call expand_builtin_signbit for BUILT_IN_SIGNBIT*.
+	(fold_builtin_signbit): New function to perform constant folding
+	of signbit, signbitf and signbitl.
+	(fold_builtin): Call fold_builtin_signbit for BUILT_IN_SIGNBIT*.
+
+	* doc/extend.texi: Document new signbit{,f,l} builtins.
+
 2004-02-01  Richard Sandiford  <rsandifo@redhat.com>
 
 	* config/mips/mips.md (adddi3_internal_2): Remove superfluous %s.
