--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-01  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.dg/builtins-1.c: Also test for __builtin_signbit{,f,l}.
+	* gcc.dg/builtins-31.c: New testcase.
+	* gcc.dg/builtins-32.c: New testcase.
+
 2004-01-30  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* objc.dg/call-super-2.m: Update line numbers
