* builtins.c (expand_builtin_pow): If flag_unsafe_math_optimizations 	isn't set, don't call expand_builtin_mathfn_2 to use the pow optab. 	(expand_builtin): Always call expand_builtin_pow.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77071 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-01  Roger Sayle  <roger@eyesopen.com>
 
+	* builtins.c (expand_builtin_pow): If flag_unsafe_math_optimizations
+	isn't set, don't call expand_builtin_mathfn_2 to use the pow optab.
+	(expand_builtin): Always call expand_builtin_pow.
+
+2004-02-01  Roger Sayle  <roger@eyesopen.com>
+
 	* builtins.def (BUILT_IN_SIGNBIT, BUILT_IN_SIGNBITF,
 	BUILT_IN_SIGNBITL): New GCC builtins.
 	* builtins.c (expand_builtin_signbit): New function to RTL expand
