* config/h8300/h8300.md (two peephole2's): New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77076 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-01  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/h8300/h8300.md (two peephole2's): New.
+
 2004-02-01  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* config/sparc/sol2-bi.h: Handle TARGET_CPU_ultrasparc3.
